# WindowingAPI

./: CMakeLists.txt  README.md  configure  input_codes.hpp  input_manager.hpp  main.cpp  window_delegate.hpp
apps/: CMakeLists.txt  main.cpp
display/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp  input_manager.cpp  input_manager.hpp  window.cpp  window.hpp  window_delegate.hpp
documentation/: LICENSE.md  README.md
include/windowing/: glfw_window.hpp  input_manager.hpp  window.hpp  window_delegate.hpp
libraries/: CMakeLists.txt
libraries/Windowing/: CMakeLists.txt
libraries/Windowing/cmake/: Installing.cmake
libraries/Windowing/include/: glfw_window.hpp  input_codes.hpp  input_manager.hpp  platform.hpp  window.hpp  window_delegate.hpp  window_types.hpp  window_visitor.hpp
libraries/Windowing/src/: glfw_window.cpp  glfw_window.hpp  input_manager.cpp  platform.cpp  window.cpp
src/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp  input_manager.cpp  window.cpp
